# ViterbiDecoderCpp

./: .gitignore  CMakeLists.txt  README.md  fx.bat  viterbi-config.cmake
.github/workflows/: arm-linux.yml  linux.yml  windows.yml  x86-linux.yml  x86-windows.yml
examples/: .gitignore  BENCHMARKS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  data_snr_ber_arm.txt  data_snr_ber_x86.txt  parse_benchmark.py  plot_snr_ber.py  run_benchmark.cpp  run_decoder.cpp  run_punctured_decoder.cpp  run_simple.cpp  run_snr_ber.cpp  run_tests.cpp
examples/arch/: simd_flags.h
examples/helpers/: cli_filters.h  common_codes.h  decode_type.h  decoder_configs.h  decoder_factories.h  puncture_code_helpers.h  simd_type.h  test_helpers.h
examples/toolchains/: README.md  aarch64-linux-gnu.toolchain.cmake  arm_build.sh  arm_install_packages.sh
examples/utility/: bitcount_table.h  console_colours.h  thread_pool.h  timer.h
include/: convolutional_encoder_lookup.h  convolutional_encoder_shift_register.h  parity_table.h  viterbi_branch_table.h  viterbi_decoder_avx_u8.h  viterbi_decoder_core.h  viterbi_decoder_scalar.h  viterbi_decoder_sse_u8.h
include/arm/: viterbi_decoder_neon_u16.h  viterbi_decoder_neon_u8.h
include/viterbi/: alignment.h  convolutional_encoder.h  convolutional_encoder_lookup.h  viterbi_branch_table.h  viterbi_decoder_core.h  viterbi_decoder_scalar.h
include/viterbi/arm/: viterbi_decoder_neon_u16.h  viterbi_decoder_neon_u8.h
include/viterbi/x86/: viterbi_decoder_avx_u16.h  viterbi_decoder_avx_u8.h  viterbi_decoder_sse_u16.h  viterbi_decoder_sse_u8.h
include/x86/: viterbi_decoder_avx_u16.h
src/examples/: codes.h  common_codes.h  decoder_factories.h  decoding_modes.h  decoding_types.h  puncture_code_helpers.h  run_benchmark.cpp  run_decoder.cpp  run_hard_decoding.cpp  run_punctured_decoder.cpp  run_simple.cpp  run_soft_decoding.cpp  span.h  test_helpers.h  timer.h
src/utility/: aligned_vector.h  bitcount_table.h
src/viterbi/: convolutional_encoder.h  convolutional_encoder_lookup.h  convolutional_encoder_shift_register.h  viterbi_decoder.h  viterbi_decoder_avx.h  viterbi_decoder_avx_u16.h  viterbi_decoder_avx_u8.h  viterbi_decoder_core.h  viterbi_decoder_scalar.h  viterbi_decoder_sse.h  viterbi_decoder_sse_u16.h  viterbi_decoder_sse_u8.h
